Simplify blank string check