@@ -31,7 +31,7 @@ public final class HtmlUtil {
     }
 
     public static boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 
     public static String nonNull(String value) {
